--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,40 @@
-pandas
-opencv-contrib-python
-opencv-python
-numpy
-keras
-Keras-Preprocessing
-tensorflow
-Flask
-Werkzeug
-itsdangerous
-Jinja2
-MarkupSafe
-click
-colorama
-Flask-Cors
-Flask-SQLAlchemy
-SQLAlchemy
+asttokens==2.4.1
+colorama==0.4.6
+comm==0.2.2
+decorator==5.1.1
+exceptiongroup==1.2.1
+executing==2.0.1
+Flask==3.0.3
+Flask-Cors==4.0.1
+Flask-SQLAlchemy==3.1.1
+ipykernel==6.29.5
+ipython==9.2.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+Jinja2==3.1.4
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
+packaging==25.0
+parso==0.8.4
+platformdirs==4.3.8
+prompt_toolkit==3.0.51
+psutil==7.0.0
+psycopg2==2.9.10
+pure_eval==0.2.3
+Pygments==2.19.1
+python-dateutil==2.9.0.post0
+pywin32==310
+pyzmq==26.4.0
+setuptools==80.9.0
+six==1.17.0
+SQLAlchemy==2.0.30
+stack-data==0.6.3
+tornado==6.4.2
+traitlets==5.14.3
+wcwidth==0.2.13
+wheel==0.45.1
 
 
